# docker-postgres-rust-ng

./: .gitignore  docker-compose.yml  init.sql
api/: .env  Cargo.toml  Rocket.toml
api/src/: api.rs  db_pool.rs  main.rs  models.rs  schema.rs
web/: .eslintrc.json  Dockerfile  README.md  angular.json  package-lock.json  package.json
web/src/: index.html
web/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
web/src/app/home/: home.component.html  home.component.scss  home.component.ts  home.service.ts
web/src/app/new-note/: new-note.component.html  new-note.component.scss  new-note.component.ts
web/src/app/note/: note.component.html  note.component.scss  note.component.ts  note.service.ts
