[package]
name = "docker_test"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.0", features = ["chrono", "postgres"] }
rocket = "0.4"
rocket_contrib = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
r2d2 = "0.8"
r2d2-diesel = "1.0"

[dev-dependencies]
diesel_cli = "1.4"